mengubah home page

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "homepage": "https://Alannuril.github.io/E-Commerce/",
+  "homepage": "https://alannuril.github.io/E-Commerce/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
